<resources>
    <string name="app_name">Pokedex</string>

    <string name="card_content_description">Pokemon card.</string>

    <string name="loadingError">Some error occurred…</string>
    <string name="loading">Loading…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="hp_text">HEALTH POINTS (%1$d / %2$d)</string>
    <string name="attack_text">ATTACK (%1$d / %2$d)</string>
    <string name="defence_text">DEFENCE (%1$d / %2$d)</string>
    <string name="speed_text">SPEED (%1$d / %2$d)</string>
    <string name="experience_text">EXPERIENCE (%1$d / %2$d)</string>
</resources>