<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".view.PokeDetailsFragment">

    <ImageView
        android:id="@+id/pokeImageDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/pokeNameDetail"
        style="@style/detail_text_style"
        android:layout_marginVertical="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokeImageDetail"
        tools:text="Poke Name"/>

    <TextView
        android:id="@+id/health"
        style="@style/detail_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hp_text"
        app:layout_constraintBottom_toTopOf="@+id/health_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeNameDetail" />

    <ProgressBar
        android:id="@+id/health_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:progressBackgroundTint="@color/text_stats_color"
        android:progressTint="@color/hp"
        android:max="500"
        app:layout_constraintBottom_toTopOf="@+id/attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/health" />

    <TextView
        android:id="@+id/attack"
        style="@style/detail_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attack_text"
        app:layout_constraintBottom_toTopOf="@+id/attack_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/health_bar" />

    <ProgressBar
        android:id="@+id/attack_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:progressBackgroundTint="@color/text_stats_color"
        android:progressTint="@color/attack"
        android:max="300"
        app:layout_constraintBottom_toTopOf="@+id/defence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attack" />

    <TextView
        android:id="@+id/defence"
        style="@style/detail_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defence_text"
        app:layout_constraintBottom_toTopOf="@+id/defence_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attack_bar" />

    <ProgressBar
        android:id="@+id/defence_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:max="400"
        android:progressBackgroundTint="@color/text_stats_color"
        android:progressTint="@color/def"
        app:layout_constraintBottom_toTopOf="@+id/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defence" />

    <TextView
        android:id="@+id/speed"
        style="@style/detail_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed_text"
        app:layout_constraintBottom_toTopOf="@+id/speed_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defence_bar" />

    <ProgressBar
        android:id="@+id/speed_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:progressBackgroundTint="@color/text_stats_color"
        android:progressTint="@color/speed"
        android:max="200"
        app:layout_constraintBottom_toTopOf="@+id/exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed" />

    <TextView
        android:id="@+id/exp"
        style="@style/detail_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience_text"
        app:layout_constraintBottom_toTopOf="@+id/exp_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_bar" />

    <ProgressBar
        android:id="@+id/exp_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:indeterminate="false"
        android:progressBackgroundTint="@color/text_stats_color"
        android:progressTint="@color/exp"
        android:max="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp" />


</androidx.constraintlayout.widget.ConstraintLayout>